Helo pls log all changes here tyyyyyyyy or your gae

17/6/24 1:46am - Zen
    - Fixed questionable html structure
    - Updated changelog.txt

17/6/24 10:48am - joon kiat
    -fixed homepage navbar slightly broken 

18/6/24 2.06pm - joon kiat
    -added logo into homepage
    -changed homepage to keyboards including store options
    -added auto sliding show for keyboard showcase in homepage

18/6/24 2:33pm - Zen
    - Added footer

18/6/24 2:42pm - Zen
    - Added hyperlink to product images
    - Slight change in homepage.html

18/6/24 3:03pm - Zen
    - Stylised the footer
    - Changed background colour

18/6/24 3:31 - Zen
    - Overhauled homepage.html style
    - Ported over navbar and footer into all htmls

18/6/24 3:47 - Zen
    - Made a template so yall can use if uw make new page. Just copy this and fill the body contents under the contents comment

24/6/24 10:47am - Zen
    - added comment as instructions in Template.html
    - converted all css thingys into external css called ligma.css :3
24/6/24 11.01am - joon kiat
    -added more stuff/content to homepage
    -added responsive web code to homepage
24/6/24 11:20am - travis
-added about me page 